# archivefile

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  lint-and-type-check.yml  test.yml  typecheck.yml
api-reference/archivefile/: index.html
api-reference/enums/: index.html
api-reference/exceptions/: index.html
api-reference/models/: index.html
api-reference/types/: index.html
api-reference/utils/: index.html
docs/: CNAME  index.md
docs/api-reference/: archivefile.md  enums.md  exceptions.md  models.md  types.md  utils.md
search/: search_index.json
src/archivefile/: __init__.py  _compat.py  _core.py  _enums.py  _exceptions.py  _models.py  _types.py  _utils.py  _version.py
src/archivefile/_adapters/: _base.py  _rar.py  _sevenzip.py  _tar.py  _zip.py
tests/: test_enums.py  test_exceptions.py  test_extract.py  test_member.py  test_models.py  test_print_table.py  test_print_tree.py  test_property.py  test_read.py  test_tree.py  test_utils.py  test_write.py  test_write_text_bytes.py  test_writeall.py
tests/test_data/: __init__.py  source_BEST.rar  source_BZIP2_SOLID.7z  source_GNU.tar.bz2  source_GNU.tar.xz  source_LZMA.7z  source_LZMA2_SOLID.7z  source_POSIX.tar  source_POSIX.tar.xz  source_PPMD.7z  source_STORE.7z  source_STORE.rar
